<resources>
    <string name="app_name">Climate Application</string>

    <string name="start_game">Start</string>
    <string name="txt_question">Loading question, please wait…</string>
    <string name="logout_menu">Sign Out</string>
    <string name="close_app">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="squirrelly">Squirrelly</string>
    <string name="discounts">Discounts</string>
    <string name="discount_map">Discount Map</string>
    <string name="menu">Menu</string>
    <!--string name="user_points">My points: %1$s</string-->
    <string name="user_points">Your points</string>
    <string name="discount_cost">%1$s points</string>

    <string name="txt_points">%1$d points</string>
    <string name="txt_discount_percent">for -%1$d %%</string>
    <string name="txt_expires">Expires: %1$s</string>

    <string name="txt_pause">Pause</string>
    <string name="txt_resume">Resume</string>
    <string name="txt_rewards">Discounts</string>
    <string name="txt_start">Start</string>
    <string name="txt_victory">Victory!</string>
    <string name="txt_loss">Loss!</string>

    <string name="txt_score">Score: %1$d</string>
    <string name="txt_HP">HP: %1$d</string>
    <string name="txt_throws">Throws: %1$d</string>
    <string name="txt_wind_x">Wind(x): %1$s</string>
    <string name="txt_wind_y">Wind(y): %1$s</string>

    <string name="meters_per_second">%1$d m/s</string>

    <string name="quiz_answer_correct_key">QuizAnswerCorrect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>

    <string name="swipe">swipe</string>
    <string name="use_discount">Do you want to use this discount now?</string>
    <string name="discount_used">Discount used!</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="create_account">Create account?</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="password_too_short">Password too short, enter minimum 6 characters!</string>
    <string name="passwords_do_not_match">Password fields does not match!</string>
    <string name="check_internet">Check your internet connection!</string>
    <string name="reset_password">Send reset password email  to: %s ?</string>
    <string name="sending_verification">Sending verification email</string>
    <string name="verification_email">Verification email has been sent!</string>
    <string name="already_sent">Verification email has already been sent!</string>
    <string name="verifying_email">Verifying email</string>
    <string name="no_registration">No registration with this email</string>
    <string name="invalid_email_form">Invalid email form!</string>
    <string name="reset_password_email">Reset password email has been sent!</string>
    <string name="email_not_verified">Email not verified!</string>
    <string name="incorrect_email_address_or_password">Incorrect email address or password!</string>
    <string name="sending_reset_password_email">Sending reset password email</string>
    <string name="singing_in">Signing in</string>
    <string name="registering_user">Registering user</string>
    <string name="registration_succeeded">Registration succeeded!</string>
    <string name="already_registered">Already registered with this email!</string>
    <string name="google_sign_in_failed">Google sign in failed!</string>
    <string name="log_out">Are you sure you want to log out?</string>

    <string name="time_left">Time left: %s</string>
    <string name="time_is_up">Time is up!</string>
    <string name="scanning">Scanning…</string>
    <string name="until_next_time">"%s until next time available"</string>
    <string name="daily_tip">DAILY TIP</string>
    <string name="loading_daily_tip">Loading daily tip…</string>

    <string name="settings">Settings</string>
    <string name="vibration">Vibration</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="got_it">GOT IT!</string>
    <string name="guide_wind_direction">This tells you direction of the wind</string>
    <string name="guide_wind_strength">This tells you the strength of the wind</string>
    <string name="guide_hp">Here are the health points of the monster</string>
    <string name="guide_throws">Here are the amount of throws you have to beat the monster</string>
    <string name="guide_pause">Here you can pause and resume the game any time you want</string>

    <string name="show_guidelines">Show guidelines?</string>
    <string name="do_not_show_again">Do not show again.</string>

    <string name="long_click">Press and hold info view to proceed to discount.</string>
</resources>
