<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_front_view"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="24sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/vibration"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/vibration"
            android:textSize="18sp"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:showText="true"
            android:textColor="@color/colorAccent"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:thumb="@drawable/thumb_selector"
            app:track="@drawable/track_selector"
            tools:checked="true"/>



        <android.support.v7.widget.SwitchCompat
            android:id="@+id/music"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/music"
            android:textSize="18sp"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:showText="true"
            android:textColor="@color/colorAccent"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:thumb="@drawable/thumb_selector"
            app:track="@drawable/track_selector"
            tools:checked="true"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sounds"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sounds"
            android:textSize="18sp"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:showText="true"
            android:textColor="@color/colorAccent"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:thumb="@drawable/thumb_selector"
            app:track="@drawable/track_selector"
            tools:checked="true"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>