<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/fragment_sign_in">

    <ImageView
        android:id="@+id/image_view_helsinki_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/helsinki_logo"
        />

    <LinearLayout
        android:id="@+id/sign_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="32dp">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@drawable/sign_in_button"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/button_send_verification_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@drawable/sign_in_button"
            android:text="@string/send_verification_email"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:weightSum="2"
        android:gravity="center"
        android:id="@+id/bottom_linear_layout">

        <TextView
            android:id="@+id/text_view_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/text_view_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/forgot_password"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>



</RelativeLayout>